<resources>
    <string name="button_save">Save Location</string>
    <string name="app_name">Shooks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="pref_update_setting">Settings</string>
    <string name="title_activity_book_category">Book Categories </string>
    <string name="select_book_Categories">Please select the book Categories under which you want to post your book.</string>
    <string name="state">State</string>
    <string name="university">University</string>
    <string name="department">Department</string>
    <string name="class1">Class</string>
    <string name="professor">Professor</string>
    <string name="next">Next</string>
    <string name="title_activity_post_book">Post Book</string>
    <string name="book_information">Book Information</string>

    <string name="srno">Sr No.</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="condition">Condition</string>
    <string name="new1">New</string>
    <string name="likenew">Like New</string>
    <string name="used">Used</string>
    <string name="damaged">Damaged</string>
    <string name="price">Price($)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="take_a_picture"> Take Photo</string>
    <string name="choose_a_picture"> Choose Photo</string>
    <string name="title_activity_display_book_info">Book Information</string>
    <string name="view_provider_info">View Book Provider Detail </string>
    <string name="title_activity_display_provider_info"> Book Provider Information </string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="title_activity_display_user_book_list">Book List</string>
    <string name="post_book">Post Book</string>
    <string name="title_activity_update_book_info">Update Book Information</string>
    <string name="action">Action</string>
    <string name="title_activity_book_search">Book Search</string>
    <string name="search_hint">Enter ISBN/Title/Author</string>
    <string name="title_activity_search_results">Search Result</string>
    <string name="title_activity_category_search">Category Search</string>
    <string-array name="defaultState"><item>State</item></string-array>
    <string-array name="defaultUniversity"><item>University</item></string-array>
    <string-array name="defaultDepartment"><item>Department</item></string-array>
    <string-array name="defaultClass"><item>Class</item></string-array>
    <string-array name="defaultProfessor"><item>Professor</item></string-array>
    <string name="location">Location</string>
    <string name="button_location">Set Book Location</string>
    <string name="button_update_location">Update Book Location</string>

    <string name="title_activity_maps">Map</string>
    <string name="button_location_save">Save Location</string>
    <integer name="google_play_services_version">8115000</integer>
    <string name="Button_view_location"> View Book Location</string>
    <string name="title_activity_display_book_location">Book Location</string>
    <string name="book_location_message">Please enter the location or click on map to select the book location.</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="categories">Categories</string>
    <string name="username">Username</string>
    <string name="passsword">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_purchase_receipt">Purchase Receipt</string>
    <string name="add">Add</string>
    <string name="wishlist_msg">Below is your current wish list\n</string>
    <string name="welcome">Welcome to Shooks Application</string>

</resources>
