<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Want to add new wish? Add it below~~"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_margin="@dimen/post_book_activity_horizontal_margin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/isbn"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_weight="0.75"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/wheat"
                android:textSize="16dp"
                android:id="@+id/isbn"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_weight="0.75"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/wheat"
                android:textSize="16dp"
                android:id="@+id/title"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"/>

        </LinearLayout>

        <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_margin="20dp"
                android:textSize="19dp"
                android:textAllCaps="false"
                android:background="@drawable/button_gradient"
                android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wishlist_msg"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_margin="@dimen/activity_horizontal_margin" />
    </LinearLayout>

</ScrollView>